:memo: Support for examples_of_RedAmber notebook

--- a/binder/README.ipynb
+++ b/binder/README.ipynb
@@ -763,7 +763,7 @@
    "source": [
     "## Another Jupyter notebook\n",
     "\n",
-    "[Examples of Red Amber](https://github.com/heronshoes/red_amber/raw/master/binder/examples_of_red_amber.ipynb) shows more examples in jupyter notebook."
+    "[Examples of Red Amber](examples_of_red_amber.ipynb) shows more examples in jupyter notebook."
    ]
   }
  ],
