--- a/binder/examples_of_red_amber.ipynb
+++ b/binder/examples_of_red_amber.ipynb
@@ -13,7 +13,7 @@
    "id": "f20f4970-db38-4d96-9a36-d4cf9d007596",
    "metadata": {},
    "source": [
-    "Last update: September 6, 2022, for RedAmber Version 0.2.1"
+    "Last update: September 14, 2022, for RedAmber Version 0.2.2-HEAD"
    ]
   },
   {
@@ -8938,32 +8938,11 @@
     "    [:Student, :Course].concat keys.select { |key| key.to_s.end_with?(\"II\") }\n",
     "  }"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 239,
-   "id": "e89cde6e-9c79-4dc6-856e-d44a6cc1025c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, [4, 5]]"
-      ]
-     },
-     "execution_count": 239,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[1,2,3] << [4,5]"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Ruby 3.1.1",
+   "display_name": "Ruby 3.1.2",
    "language": "ruby",
    "name": "ruby"
   },
@@ -8971,7 +8950,7 @@
    "file_extension": ".rb",
    "mimetype": "application/x-ruby",
    "name": "ruby",
-   "version": "3.1.1"
+   "version": "3.1.2"
   }
  },
  "nbformat": 4,
