--- a/doc/notebook/red-amber.ipynb
+++ b/doc/notebook/red-amber.ipynb
@@ -18,11 +18,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{:RedAmber=>\"0.5.0\", :Datasets=>\"0.1.7\"}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "require 'red_amber'\n",
     "include RedAmber\n",
@@ -172,7 +183,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Ruby 3.0.2",
+   "display_name": "Ruby 3.2.2",
    "language": "ruby",
    "name": "ruby"
   },
@@ -180,7 +191,7 @@
    "file_extension": ".rb",
    "mimetype": "application/x-ruby",
    "name": "ruby",
-   "version": "3.0.2"
+   "version": "3.2.2"
   }
  },
  "nbformat": 4,
