--- a/doc/qmd/red-amber.qmd
+++ b/doc/qmd/red-amber.qmd
@@ -1,6 +1,21 @@
 ---
 title: RedAmber Examples
-jupyter: ruby
+date: 2023-08-06
+author: heronshoes
+format:
+  pdf:
+    toc: true
+    number-sections: true
+    colorlinks: true
+  ipynb:
+    markdown-headings: atx
+    ipynb-output: all
+    toc: true
+    toc-depth: 2
+    number-sections: true
+    execute:
+      eval: true
+      output: true
 ---
 
 This notebook walks through the [README of RedAmber](https://github.com/heronshoes/red_amber#readme).
